Second "Ravi" post... this should be deleted...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <a href="https://probablybenji.tk">
+  <a href="http://probablybenji.tk">
     <span>
         <b>{{ site.owner}}</b>
     </span>
